--- a/index.html
+++ b/index.html
@@ -17,31 +17,32 @@
 
 <body>
   <img src="./images/bg-main-mobile.png" class="bg-mobile">
-  <img src="./images/bg-main-desktop.png" class="bg-desktop">
+  <!-- <img src="./images/bg-main-desktop.png" class="bg-desktop"> -->
 
   <div class="container">
     <section class="section-card">
       <div class="card-back">
         <img src="./images/bg-card-back.png" alt="back of card" class="card-back__img">
-        <p class="card-back__cvc">000</p>
+        <!-- <p class="card-back__cvc">000</p> -->
       </div>
       <div class="card-front">
         <img src="./images/bg-card-front.png" alt="front of card" class="card-front__img">
-        <img src="./images/card-logo.svg" alt="card logo" class="card-front__logo">
+        <!-- <img src="./images/card-logo.svg" alt="card logo" class="card-front__logo">
         <div class="card-front__details">
           <p class="card-front__number">0000 0000 0000 0000</p>
           <p class="card-front__cardholder">Jane Appleseed</p>
           <p class="card-front__expiry">00/00</p>
-        </div>
+        </div> -->
       </div>
     </section>
     <section class="section-form">
-      <form action="" method="post" class="card-form">
+      THIS IS THE FORM SECTION
+      <!-- <form action="" method="post" class="card-form">
         <label for="cardholder-name">Cardholder Name</label>
         <input type="text" id="cardholder-name" name="cardholder_name">
         <label for="card-number">Card Number</label>
         <input type="text" id="card-number" name="card_number">
-      </form>
+      </form> -->
     </section>
   </div>
 </body>
